# lstm

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
experiments/: CMakeLists.txt  README.md
experiments/lstm/: CMakeLists.txt  lstm.h  lstm_cuda_test.cc
experiments/lstm/kernels/: CMakeLists.txt  IctKernels.cu  IctKernels_10_100.cu  IctKernels_10_100_functions.cu  IctLstm100_10_256_lib.cu  IctLstmCell.cu  IctLstmCellBS16.cu  IctLstmCellBS4.cu  IctSeq2SeqLstmlib.cu  LstmComputeOneKernel.cu  LstmNaive-zjc.cu  LstmNaive.cu  LstmNaive_sharedmemory.cu
experiments/lstm/kernels/ictlstm100_10_256_fusedcompute_128threads_lib/: generate.py  wave_0.cu  wave_1.cu  wave_10.cu  wave_100.cu  wave_101.cu  wave_102.cu  wave_103.cu  wave_104.cu  wave_105.cu  wave_106.cu  wave_107.cu  wave_108.cu  wave_109.cu  wave_11.cu  wave_12.cu  wave_13.cu  wave_14.cu  wave_15.cu  wave_16.cu  wave_17.cu  wave_18.cu  wave_19.cu  wave_2.cu  wave_20.cu  wave_21.cu  wave_22.cu  wave_23.cu  wave_24.cu  wave_25.cu  wave_26.cu  wave_27.cu  wave_28.cu  wave_29.cu  wave_3.cu  wave_30.cu  wave_31.cu  wave_32.cu  wave_33.cu  wave_34.cu  (+71 more)
experiments/lstm/kernels/ictlstm100_10_256_fusedcompute_512threads_lib/: generate.py  wave_0.cu  wave_1.cu  wave_10.cu  wave_100.cu  wave_101.cu  wave_102.cu  wave_103.cu  wave_104.cu  wave_105.cu  wave_106.cu  wave_107.cu  wave_108.cu  wave_109.cu  wave_11.cu  wave_12.cu  wave_13.cu  wave_14.cu  wave_15.cu  wave_16.cu  wave_17.cu  wave_18.cu  wave_19.cu  wave_2.cu  wave_20.cu  wave_21.cu  wave_22.cu  wave_23.cu  wave_24.cu  wave_25.cu  wave_26.cu  wave_27.cu  wave_28.cu  wave_29.cu  wave_3.cu  wave_30.cu  wave_31.cu  wave_32.cu  wave_33.cu  wave_34.cu  (+71 more)
experiments/lstm/kernels/ictlstm100_10_256_fusedcompute_lib/: generate.py  wave_0.cu  wave_1.cu  wave_10.cu  wave_100.cu  wave_101.cu  wave_102.cu  wave_103.cu  wave_104.cu  wave_105.cu  wave_106.cu  wave_107.cu  wave_108.cu  wave_109.cu  wave_11.cu  wave_12.cu  wave_13.cu  wave_14.cu  wave_15.cu  wave_16.cu  wave_17.cu  wave_18.cu  wave_19.cu  wave_2.cu  wave_20.cu  wave_21.cu  wave_22.cu  wave_23.cu  wave_24.cu  wave_25.cu  wave_26.cu  wave_27.cu  wave_28.cu  wave_29.cu  wave_3.cu  wave_30.cu  wave_31.cu  wave_32.cu  wave_33.cu  wave_34.cu  (+71 more)
experiments/lstm/kernels/ictlstm100_10_256_naivefuse_fusedsolve_fusedcompute_adduw_float4_16blocks_percell_lib/: generate.py  wave_0.cu  wave_1.cu  wave_10.cu  wave_100.cu  wave_101.cu  wave_102.cu  wave_103.cu  wave_104.cu  wave_105.cu  wave_106.cu  wave_107.cu  wave_108.cu  wave_11.cu  wave_12.cu  wave_13.cu  wave_14.cu  wave_15.cu  wave_16.cu  wave_17.cu  wave_18.cu  wave_19.cu  wave_2.cu  wave_20.cu  wave_21.cu  wave_22.cu  wave_23.cu  wave_24.cu  wave_25.cu  wave_26.cu  wave_27.cu  wave_28.cu  wave_29.cu  wave_3.cu  wave_30.cu  wave_31.cu  wave_32.cu  wave_33.cu  wave_34.cu  wave_35.cu  (+70 more)
experiments/lstm/kernels/ictlstm100_10_256_naivefuse_fusedsolve_fusedcompute_adduw_float4_lib/: generate.py  wave_0.cu  wave_1.cu  wave_10.cu  wave_100.cu  wave_101.cu  wave_102.cu  wave_103.cu  wave_104.cu  wave_105.cu  wave_106.cu  wave_107.cu  wave_108.cu  wave_11.cu  wave_12.cu  wave_13.cu  wave_14.cu  wave_15.cu  wave_16.cu  wave_17.cu  wave_18.cu  wave_19.cu  wave_2.cu  wave_20.cu  wave_21.cu  wave_22.cu  wave_23.cu  wave_24.cu  wave_25.cu  wave_26.cu  wave_27.cu  wave_28.cu  wave_29.cu  wave_3.cu  wave_30.cu  wave_31.cu  wave_32.cu  wave_33.cu  wave_34.cu  wave_35.cu  (+70 more)
experiments/lstm/kernels/ictlstm100_10_256_naivefuse_fusedsolve_fusedcompute_adduw_lib/: generate.py  wave_0.cu  wave_1.cu  wave_10.cu  wave_100.cu  wave_101.cu  wave_102.cu  wave_103.cu  wave_104.cu  wave_105.cu  wave_106.cu  wave_107.cu  wave_108.cu  wave_109.cu  wave_11.cu  wave_12.cu  wave_13.cu  wave_14.cu  wave_15.cu  wave_16.cu  wave_17.cu  wave_18.cu  wave_19.cu  wave_2.cu  wave_20.cu  wave_21.cu  wave_22.cu  wave_23.cu  wave_24.cu  wave_25.cu  wave_26.cu  wave_27.cu  wave_28.cu  wave_29.cu  wave_3.cu  wave_30.cu  wave_31.cu  wave_32.cu  wave_33.cu  wave_34.cu  (+71 more)
experiments/lstm/kernels/ictlstm100_10_256_naivefuse_fusedsolve_fusedcompute_adduw_lib_16blocks_percell/: generate.py  wave_0.cu  wave_1.cu  wave_10.cu  wave_100.cu  wave_101.cu  wave_102.cu  wave_103.cu  wave_104.cu  wave_105.cu  wave_106.cu  wave_107.cu  wave_108.cu  wave_11.cu  wave_12.cu  wave_13.cu  wave_14.cu  wave_15.cu  wave_16.cu  wave_17.cu  wave_18.cu  wave_19.cu  wave_2.cu  wave_20.cu  wave_21.cu  wave_22.cu  wave_23.cu  wave_24.cu  wave_25.cu  wave_26.cu  wave_27.cu  wave_28.cu  wave_29.cu  wave_3.cu  wave_30.cu  wave_31.cu  wave_32.cu  wave_33.cu  wave_34.cu  wave_35.cu  (+70 more)
experiments/lstm/kernels/ictlstm100_10_256_naivefuse_fusedsolve_fusedcompute_lib/: generate.py  wave_0.cu  wave_1.cu  wave_10.cu  wave_100.cu  wave_101.cu  wave_102.cu  wave_103.cu  wave_104.cu  wave_105.cu  wave_106.cu  wave_107.cu  wave_108.cu  wave_11.cu  wave_12.cu  wave_13.cu  wave_14.cu  wave_15.cu  wave_16.cu  wave_17.cu  wave_18.cu  wave_19.cu  wave_2.cu  wave_20.cu  wave_21.cu  wave_22.cu  wave_23.cu  wave_24.cu  wave_25.cu  wave_26.cu  wave_27.cu  wave_28.cu  wave_29.cu  wave_3.cu  wave_30.cu  wave_31.cu  wave_32.cu  wave_33.cu  wave_34.cu  wave_35.cu  (+70 more)
experiments/lstm/kernels/ictlstm100_10_256_naivefuse_fusedsolve_lib/: generate.py  wave_0.cu  wave_1.cu  wave_10.cu  wave_100.cu  wave_101.cu  wave_102.cu  wave_103.cu  wave_104.cu  wave_105.cu  wave_106.cu  wave_107.cu  wave_108.cu  wave_11.cu  wave_12.cu  wave_13.cu  wave_14.cu  wave_15.cu  wave_16.cu  wave_17.cu  wave_18.cu  wave_19.cu  wave_2.cu  wave_20.cu  wave_21.cu  wave_22.cu  wave_23.cu  wave_24.cu  wave_25.cu  wave_26.cu  wave_27.cu  (+79 more)
experiments/lstm/net/: CMakeLists.txt  Lstm.h
experiments/lstm/tests/: CMakeLists.txt  LstmTest.h
experiments/resnet50/: CMakeLists.txt
experiments/resnet50/lib/: CMakeLists.txt
experiments/resnet50/tests/: CMakeLists.txt
src/compiler/ast/: Cargo.toml
src/compiler/interface/: Cargo.toml
src/compiler/parser/: Cargo.toml
src/compiler/session/: Cargo.toml
src/compiler/span/: Cargo.toml
src/nodemanager/: Cargo.toml
src/nodemanager/src/: config.rs  lib.rs  rpc.rs
(+1542 files in other folders)
