[package]
authors = ["Haohui Mai <haohui@alt-chain.io>"]
edition = "2018"
name = "mica"
version = "0.1.0"

[dependencies]
clap = "2.33"
env_logger = "0.8.2"
log = "0.4"
mica-compiler-interface = {path = "src/compiler/interface"}
mica-dataplane-gpu = {path = "src/dataplane-gpu"}
mica-nodemanager = {path = "src/nodemanager"}
mica-rpc-api = {path = "src/rpc-api"}
prost = "0.7"
prost-types = "0.7"
tokio = {version = "1.2", features = ["rt-multi-thread", "time", "fs", "macros", "net"]}
tokio-stream = {version = "0.1", features = ["net"]}
tonic = "0.4.0"

[[bin]]
name = "mica-nodemanagerd"
path = "./src/nodemanager/daemon/src/bin/main.rs"

[[bin]]
name = "mica-resourcemanagerd"
path = "./src/resourcemanager/daemon/src/bin/main.rs"

[[bin]]
name = "mica-cli"
path = "./src/cli/src/bin/main.rs"

[[bin]]
name = "micac"
path = "./src/compiler/micac/src/bin/main.rs"

[build-dependencies]
tonic-build = {version = "0.4.0", features = ["prost"]}
