[package]
name = "mica-nodemanager"
description = "Node manager for MICA"
version = "0.1.0"
authors = ["Haohui Mai <haohui@alt-chain.io>"]
edition = "2018"

[dependencies]
log = "0.4"
tonic = "0.4.0"
mica-rpc-api = { path = "../rpc-api" }
toml = "0.5"
uuid = "0.8"
tokio = "1.2"
tokio-stream = { version =  "0.1", features = ["net"] }
weak-self = "1.0.2"