[package]
authors = ["Haohui Mai <haohui@alt-chain.io>"]
edition = "2018"
name = "mica-compiler-ast"
version = "0.1.0"

[dependencies]
mica-compiler-span = {path = "../span"}
rustc_ast = {package = "rustc-ap-rustc_ast", version = "707.0.0"}
rustc_macros = {package = "rustc-ap-rustc_macros", version = "707.0.0"}
rustc_data_structures = {package = "rustc-ap-rustc_data_structures", version = "707.0.0"}
smallvec = { version = "1.6.1", features = ["union", "may_dangle"] }
# FIXME
rustc_lexer = {package = "rustc-ap-rustc_lexer", version = "707.0.0"}