[package]
authors = ["Haohui Mai <haohui@alt-chain.io>"]
edition = "2018"
name = "mica-compiler-interface"
version = "0.1.0"

[dependencies]
mica-compiler-ast = {path = "../ast"}
mica-compiler-parser = {path = "../parser"}
mica-compiler-session = {path = "../session"}
mica-compiler-span = {path = "../span"}
rustc_errors = {package = "rustc-ap-rustc_errors", version = "707.0.0"}
