[package]
authors = ["Haohui Mai <haohui@alt-chain.io>"]
edition = "2018"
name = "mica-compiler-span"
version = "0.1.0"

[dependencies]
rustc_arena = {package = "rustc-ap-rustc_arena", version = "707.0.0"}
rustc_data_structures = {package = "rustc-ap-rustc_data_structures", version = "707.0.0"}
rustc_span = {package = "rustc-ap-rustc_span", version = "707.0.0"}
rustc_macros = {package = "rustc-ap-rustc_macros", version = "707.0.0"}
rustc_index = {package = "rustc-ap-rustc_index", version = "707.0.0"}
rustc_serialize = {package = "rustc-ap-rustc_serialize", version = "707.0.0"}
scoped-tls = "1.0"