
add_executable(TestFuseLstm100_10_1_256 TestFuseLstm100_10_1_256.cc)
add_executable(BenchmarkFuseLstm100_10_1_256 BenchmarkFuseLstm100_10_1_256.cc)

add_executable(TestFuseLstm100_10_1_256_16blocks_eachcell TestFuseLstm100_10_1_256_16blocks_eachcell.cc)
add_executable(BenchmarkFuseLstm100_10_1_256_16blocks_eachcell BenchmarkFuseLstm100_10_1_256_16blocks_eachcell.cc)

add_executable(TestFuseLstm100_10_1_256_Naivefuse_Fusedsolve_Fusedcompute TestFuseLstm100_10_1_256.cc)
add_executable(BenchmarkFuseLstm100_10_1_256_Naivefuse_Fusedsolve_Fusedcompute BenchmarkFuseLstm100_10_1_256.cc)

add_executable(TestFuseLstm100_10_1_256_Naivefuse_Fusedsolve_Fusedcompute_AddUW TestFuseLstm100_10_1_256.cc)
add_executable(BenchmarkFuseLstm100_10_1_256_Naivefuse_Fusedsolve_Fusedcompute_AddUW BenchmarkFuseLstm100_10_1_256.cc)

add_executable(TestFuseLstm100_10_1_256_Naivefuse TestFuseLstmComputeAndSolve_100_10_1_256.cc)
add_executable(BenchmarkFuseLstm100_10_1_256_Naivefuse BenchmarkFuseLstmComputeAndSolve_100_10_1_256.cc)

add_executable(TestFuseLstm100_10_1_256_Fusedcompute TestFuseLstmComputeAndSolve_100_10_1_256.cc)
add_executable(BenchmarkFuseLstm100_10_1_256_Fusedcompute BenchmarkFuseLstmComputeAndSolve_100_10_1_256.cc)

add_executable(TestFuseLstm100_10_1_256_Fusedcompute_128threads TestFuseLstmComputeAndSolve_100_10_1_256_128threads.cc)
add_executable(BenchmarkFuseLstm100_10_1_256_Fusedcompute_128threads BenchmarkFuseLstmComputeAndSolve_100_10_1_256_128threads.cc)

add_executable(TestFuseLstm100_10_1_256_Fusedcompute_512threads TestFuseLstmComputeAndSolve_100_10_1_256_512threads.cc)
add_executable(BenchmarkFuseLstm100_10_1_256_Fusedcompute_512threads BenchmarkFuseLstmComputeAndSolve_100_10_1_256_512threads.cc)


# add_executable(TestFuseLstm100_10_1_256_BS4 TestFuseLstm100_10_1_256_BS4.cc)
# add_executable(BenchmarkFuseLstm100_10_1_256_BS4 BenchmarkFuseLstm100_10_1_256_BS4.cc)
# add_executable(TestFuseLstm100_10_1_256_BS16 TestFuseLstm100_10_1_256_BS16.cc)
# add_executable(BenchmarkFuseLstm100_10_1_256_BS16 BenchmarkFuseLstm100_10_1_256_BS16.cc)

# add_executable(TestLstmExperiment_4W_4U_16blocks TestLstm_100_10_1_256_experiment_4W_4U_16blocks.cc)
# add_executable(BenchmarkLstm_100_10_1_256_experiment_4W_4U_16blocks BenchmarkLstm_100_10_1_256_experiment_4W_4U_16blocks.cc)

# add_executable(TestLstmExperiment_1W_64blocks TestLstm_100_10_1_256_experiment_1W_64blocks.cc)
# add_executable(BenchmarkLstm_100_10_1_256_experiment_1W_64blocks BenchmarkLstm_100_10_1_256_experiment_1W_64blocks.cc)

# add_executable(TestLstmExperiment_1W_1U_32blocks TestLstm_100_10_1_256_experiment_1W_1U_32blocks.cc)
# add_executable(BenchmarkLstm_100_10_1_256_experiment_1W_1U_32blocks BenchmarkLstm_100_10_1_256_experiment_1W_1U_32blocks.cc)

# add_executable(TestLstmExperiment_2W_2U_16blocks TestLstm_100_10_1_256_experiment_2W_2U_16blocks.cc)
# add_executable(BenchmarkLstm_100_10_1_256_experiment_2W_2U_16blocks BenchmarkLstm_100_10_1_256_experiment_2W_2U_16blocks.cc)


target_link_libraries(TestFuseLstm100_10_1_256 GTest::gtest_main LSTM100_10 IctLstm100_10_256_cudalib IctLstm100_10_256_Fusedcompute_cudalib utilslib)
target_link_libraries(BenchmarkFuseLstm100_10_1_256 GTest::gtest_main LSTM100_10 IctLstm100_10_256_cudalib IctLstm100_10_256_Fusedcompute_cudalib utilslib)

target_link_libraries(TestFuseLstm100_10_1_256_16blocks_eachcell GTest::gtest_main LSTM100_10 IctLstm100_10_256_Naivefuse_Fusedsolve_Fusedcompute_AddUW_cudalib_16blocks_eachcell IctLstm100_10_256_Fusedcompute_cudalib utilslib)
target_link_libraries(BenchmarkFuseLstm100_10_1_256_16blocks_eachcell GTest::gtest_main LSTM100_10 IctLstm100_10_256_Naivefuse_Fusedsolve_Fusedcompute_AddUW_cudalib_16blocks_eachcell IctLstm100_10_256_Fusedcompute_cudalib utilslib)

target_link_libraries(TestFuseLstm100_10_1_256_Naivefuse_Fusedsolve_Fusedcompute GTest::gtest_main LSTM100_10 IctLstm100_10_256_Naivefuse_Fusedsolve_Fusedcompute_cudalib IctLstm100_10_256_Fusedcompute_cudalib utilslib)
target_link_libraries(BenchmarkFuseLstm100_10_1_256_Naivefuse_Fusedsolve_Fusedcompute GTest::gtest_main LSTM100_10 IctLstm100_10_256_Naivefuse_Fusedsolve_Fusedcompute_cudalib IctLstm100_10_256_Fusedcompute_cudalib utilslib)

target_link_libraries(TestFuseLstm100_10_1_256_Naivefuse_Fusedsolve_Fusedcompute_AddUW GTest::gtest_main LSTM100_10 IctLstm100_10_256_Naivefuse_Fusedsolve_Fusedcompute_AddUW_cudalib IctLstm100_10_256_Fusedcompute_cudalib utilslib)
target_link_libraries(BenchmarkFuseLstm100_10_1_256_Naivefuse_Fusedsolve_Fusedcompute_AddUW GTest::gtest_main LSTM100_10 IctLstm100_10_256_Naivefuse_Fusedsolve_Fusedcompute_AddUW_cudalib IctLstm100_10_256_Fusedcompute_cudalib utilslib)

target_link_libraries(TestFuseLstm100_10_1_256_Naivefuse GTest::gtest_main LSTM100_10 IctLstm100_10_256_cudalib IctLstm100_10_256_Fusedcompute_cudalib utilslib)
target_link_libraries(BenchmarkFuseLstm100_10_1_256_Naivefuse GTest::gtest_main LSTM100_10 IctLstm100_10_256_cudalib IctLstm100_10_256_Naivefuse_cudalib utilslib)

target_link_libraries(TestFuseLstm100_10_1_256_Fusedcompute GTest::gtest_main LSTM100_10 IctLstm100_10_256_cudalib IctLstm100_10_256_Fusedcompute_cudalib utilslib)
target_link_libraries(BenchmarkFuseLstm100_10_1_256_Fusedcompute GTest::gtest_main LSTM100_10 IctLstm100_10_256_cudalib IctLstm100_10_256_Fusedcompute_cudalib utilslib)

target_link_libraries(TestFuseLstm100_10_1_256_Fusedcompute_128threads GTest::gtest_main LSTM100_10 IctLstm100_10_256_cudalib IctLstm100_10_256_Fusedcompute_128threads_cudalib utilslib)
target_link_libraries(BenchmarkFuseLstm100_10_1_256_Fusedcompute_128threads GTest::gtest_main LSTM100_10 IctLstm100_10_256_cudalib IctLstm100_10_256_Fusedcompute_128threads_cudalib utilslib)

target_link_libraries(TestFuseLstm100_10_1_256_Fusedcompute_512threads GTest::gtest_main LSTM100_10 IctLstm100_10_256_cudalib IctLstm100_10_256_Fusedcompute_512threads_cudalib utilslib)
target_link_libraries(BenchmarkFuseLstm100_10_1_256_Fusedcompute_512threads GTest::gtest_main LSTM100_10 IctLstm100_10_256_cudalib IctLstm100_10_256_Fusedcompute_512threads_cudalib utilslib)


# target_link_libraries(TestFuseLstm100_10_1_256_BS4 GTest::gtest_main LSTM100_10_BS4 IctLstmCellBS4 utilslib)
# target_link_libraries(BenchmarkFuseLstm100_10_1_256_BS4 GTest::gtest_main LSTM100_10_BS4 IctLstmCellBS4 utilslib)
# target_link_libraries(TestFuseLstm100_10_1_256_BS16 GTest::gtest_main LSTM100_10_BS16 IctLstmCellBS16 utilslib)
# target_link_libraries(BenchmarkFuseLstm100_10_1_256_BS16 GTest::gtest_main LSTM100_10_BS16 IctLstmCellBS16 utilslib)

# target_link_libraries(TestLstmExperiment_4W_4U_16blocks GTest::gtest_main LSTM100_10Experiment LstmExperiment4W_4U_16blocks_lib utilslib)
# target_link_libraries(BenchmarkLstm_100_10_1_256_experiment_4W_4U_16blocks GTest::gtest_main LSTM100_10Experiment LstmExperiment4W_4U_16blocks_lib utilslib)

# target_link_libraries(TestLstmExperiment_1W_64blocks GTest::gtest_main LSTM100_10Experiment LstmExperiment1W_64blocks_lib utilslib)
# target_link_libraries(BenchmarkLstm_100_10_1_256_experiment_1W_64blocks GTest::gtest_main LSTM100_10Experiment LstmExperiment1W_64blocks_lib utilslib)

# target_link_libraries(TestLstmExperiment_1W_1U_32blocks GTest::gtest_main LSTM100_10Experiment LstmExperiment1W_1U_32blocks_lib utilslib)
# target_link_libraries(BenchmarkLstm_100_10_1_256_experiment_1W_1U_32blocks GTest::gtest_main LSTM100_10Experiment LstmExperiment1W_1U_32blocks_lib utilslib)

# target_link_libraries(TestLstmExperiment_2W_2U_16blocks GTest::gtest_main LSTM100_10Experiment LstmExperiment2W_2U_16blocks_lib utilslib)
# target_link_libraries(BenchmarkLstm_100_10_1_256_experiment_2W_2U_16blocks GTest::gtest_main LSTM100_10Experiment LstmExperiment2W_2U_16blocks_lib utilslib)

add_subdirectory(utils)
add_subdirectory(wavefront_lstm_10_100_1_256_adjust_kernel_compute_test)
add_custom_command(TARGET TestFuseLstm100_10_1_256
POST_BUILD
COMMAND cp -r ${CMAKE_CURRENT_LIST_DIR}/test_data ${CMAKE_CURRENT_BINARY_DIR} 
COMMAND cp -r ${CMAKE_CURRENT_LIST_DIR}/test_data ${CMAKE_CURRENT_BINARY_DIR}/wavefront_lstm_10_100_1_256_adjust_kernel_compute_test
VERBATIM
)

