add_executable(TestLstmExperiment_4W_4U_16blocks TestLstm_100_10_1_256_experiment_4W_4U_16blocks.cc)
add_executable(BenchmarkLstm_100_10_1_256_experiment_4W_4U_16blocks BenchmarkLstm_100_10_1_256_experiment_4W_4U_16blocks.cc)

add_executable(TestLstmExperiment_1W_64blocks TestLstm_100_10_1_256_experiment_1W_64blocks.cc)
add_executable(BenchmarkLstm_100_10_1_256_experiment_1W_64blocks BenchmarkLstm_100_10_1_256_experiment_1W_64blocks.cc)

add_executable(TestLstmExperiment_1W_1U_32blocks TestLstm_100_10_1_256_experiment_1W_1U_32blocks.cc)
add_executable(BenchmarkLstm_100_10_1_256_experiment_1W_1U_32blocks BenchmarkLstm_100_10_1_256_experiment_1W_1U_32blocks.cc)

add_executable(TestLstmExperiment_2W_2U_16blocks TestLstm_100_10_1_256_experiment_2W_2U_16blocks.cc)
add_executable(BenchmarkLstm_100_10_1_256_experiment_2W_2U_16blocks BenchmarkLstm_100_10_1_256_experiment_2W_2U_16blocks.cc)

target_link_libraries(TestLstmExperiment_4W_4U_16blocks GTest::gtest_main LSTM100_10Experiment LstmExperiment4W_4U_16blocks_lib utilslib)
target_link_libraries(BenchmarkLstm_100_10_1_256_experiment_4W_4U_16blocks GTest::gtest_main LSTM100_10Experiment LstmExperiment4W_4U_16blocks_lib utilslib)

target_link_libraries(TestLstmExperiment_1W_64blocks GTest::gtest_main LSTM100_10Experiment LstmExperiment1W_64blocks_lib utilslib)
target_link_libraries(BenchmarkLstm_100_10_1_256_experiment_1W_64blocks GTest::gtest_main LSTM100_10Experiment LstmExperiment1W_64blocks_lib utilslib)

target_link_libraries(TestLstmExperiment_1W_1U_32blocks GTest::gtest_main LSTM100_10Experiment LstmExperiment1W_1U_32blocks_lib utilslib)
target_link_libraries(BenchmarkLstm_100_10_1_256_experiment_1W_1U_32blocks GTest::gtest_main LSTM100_10Experiment LstmExperiment1W_1U_32blocks_lib utilslib)

target_link_libraries(TestLstmExperiment_2W_2U_16blocks GTest::gtest_main LSTM100_10Experiment LstmExperiment2W_2U_16blocks_lib utilslib)
target_link_libraries(BenchmarkLstm_100_10_1_256_experiment_2W_2U_16blocks GTest::gtest_main LSTM100_10Experiment LstmExperiment2W_2U_16blocks_lib utilslib)
