add_executable(TestLstmExperiment_20cells_4W_4U_16blocks TestLstm_100_20_1_256_experiment_4W_4U_16blocks.cc)
add_executable(BenchmarkLstm_100_20_1_256_experiment_4W_4U_16blocks BenchmarkLstm_100_20_1_256_experiment_4W_4U_16blocks.cc)

add_executable(TestLstmExperiment_20cells_1W_64blocks TestLstm_100_20_1_256_experiment_1W_64blocks.cc)
add_executable(BenchmarkLstm_100_20_1_256_experiment_1W_64blocks BenchmarkLstm_100_20_1_256_experiment_1W_64blocks.cc)

add_executable(TestLstmExperiment_20cells_1W_1U_32blocks TestLstm_100_20_1_256_experiment_1W_1U_32blocks.cc)
add_executable(BenchmarkLstm_100_20_1_256_experiment_1W_1U_32blocks BenchmarkLstm_100_20_1_256_experiment_1W_1U_32blocks.cc)

add_executable(TestLstmExperiment_20cells_8W_8blocks TestLstm_100_20_1_256_experiment_8W_8blocks.cc)
add_executable(BenchmarkLstm_100_20_1_256_experiment_8W_8blocks BenchmarkLstm_100_20_1_256_experiment_8W_8blocks.cc)


target_link_libraries(TestLstmExperiment_20cells_4W_4U_16blocks GTest::gtest_main LSTM100_20Experiment LstmExperiment4W_4U_16blocks_20cells_lib utilslib)
target_link_libraries(BenchmarkLstm_100_20_1_256_experiment_4W_4U_16blocks GTest::gtest_main LSTM100_20Experiment LstmExperiment4W_4U_16blocks_20cells_lib utilslib)

target_link_libraries(TestLstmExperiment_20cells_1W_64blocks GTest::gtest_main LSTM100_20Experiment LstmExperiment1W_64blocks_20cells_lib utilslib)
target_link_libraries(BenchmarkLstm_100_20_1_256_experiment_1W_64blocks GTest::gtest_main LSTM100_20Experiment LstmExperiment1W_64blocks_20cells_lib utilslib)

target_link_libraries(TestLstmExperiment_20cells_1W_1U_32blocks GTest::gtest_main LSTM100_20Experiment LstmExperiment1W_1U_32blocks_20cells_lib utilslib_20cells)
target_link_libraries(BenchmarkLstm_100_20_1_256_experiment_1W_1U_32blocks GTest::gtest_main LSTM100_20Experiment LstmExperiment1W_1U_32blocks_20cells_lib utilslib)

target_link_libraries(TestLstmExperiment_20cells_8W_8blocks GTest::gtest_main LSTM100_20Experiment LstmExperiment8W_8blocks_20cells_lib utilslib)
target_link_libraries(BenchmarkLstm_100_20_1_256_experiment_8W_8blocks GTest::gtest_main LSTM100_20Experiment LstmExperiment8W_8blocks_20cells_lib utilslib)


add_custom_command(TARGET TestLstmExperiment_20cells_4W_4U_16blocks
POST_BUILD
COMMAND cp -r ${CMAKE_CURRENT_LIST_DIR}/test_data ${CMAKE_CURRENT_BINARY_DIR} 
VERBATIM
)